update: fix mitra pkl

--- a/profil.html
+++ b/profil.html
@@ -715,6 +715,7 @@
                                     <img src="img/sadita.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
                                 </div>
                             </div>
+                    </div>
 
                         <h2 class="text-xl font-semibold mb-8 text-gray-800">
                             <i class="fas fa-handshake mr-4 text-lime-500"></i>
@@ -726,59 +727,34 @@
 
                                 <!-- Logo Item -->
                                 <div class="flex-shrink-0 flex items-center justify-center h-16">
-                                    <img src="img/unhas.png" alt="Universitas Hasanuddin" class="h-16 w-auto object-contain">
+                                    <img src="img/airnav.png" alt="Universitas Negeri Malang" class="h-16 w-auto object-contain">
                                 </div>
 
                                 <div class="flex-shrink-0 flex items-center justify-center h-16">
-                                    <img src="img/UNM.png" alt="Universitas Negeri Malang" class="h-16 w-auto object-contain">
+                                    <img src="img/celebes.jfif" alt="Universitas Telkom" class="h-16 w-auto object-contain">
                                 </div>
 
                                 <div class="flex-shrink-0 flex items-center justify-center h-16">
-                                    <img src="img/Telkom U.webp" alt="Universitas Telkom" class="h-16 w-auto object-contain">
+                                    <img src="img/ilcs.webp" alt="Universitas Dipanegara" class="h-16 w-auto object-contain">
                                 </div>
 
                                 <div class="flex-shrink-0 flex items-center justify-center h-16">
-                                    <img src="img/undipa.png" alt="Universitas Dipanegara" class="h-16 w-auto object-contain">
+                                    <img src="img/jogjaide.png" alt="Universitas Ciputera" class="h-16 w-auto object-contain">
                                 </div>
 
                                 <div class="flex-shrink-0 flex items-center justify-center h-16">
-                                    <img src="img/UC.png" alt="Universitas Ciputera" class="h-16 w-auto object-contain">
-                                </div>
-
-                                <div class="flex-shrink-0 flex items-center justify-center h-16">
-                                    <img src="img/telkom purwo.jpg" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
-                                </div>
-
-                                <div class="flex-shrink-0 flex items-center justify-center h-16">
-                                    <img src="img/Muhammadiyah.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
-                                </div>
-
-                                <div class="flex-shrink-0 flex items-center justify-center h-16">
-                                    <img src="img/UMII.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
-                                </div>
-
-                                <div class="flex-shrink-0 flex items-center justify-center h-16">
-                                    <img src="img/poltekpar.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
-                                </div>
-
-                                <div class="flex-shrink-0 flex items-center justify-center h-16">
-                                    <img src="img/ALI.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
-                                </div>
-
-                                <div class="flex-shrink-0 flex items-center justify-center h-16">
-                                    <img src="img/poli bosowa.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
-                                </div>
-
-                                <div class="flex-shrink-0 flex items-center justify-center h-16">
-                                    <img src="img/media kreatif.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
+                                    <img src="img/wasd.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
                                 </div>
 
                                 <div class="flex-shrink-0 flex items-center justify-center h-16">
                                     <img src="img/sadita.png" alt="Institut Teknologi Telkom Purwokerto" class="h-16 w-auto object-contain">
                                 </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/KBI.png" alt="Universitas Hasanuddin" class="h-16 w-auto object-contain">
+                                </div>
                             </div>
                         </div>
-                    </div>
                 </div>
             </div>
         </section>
