--- a/artikel.html
+++ b/artikel.html
@@ -64,15 +64,15 @@
             <!-- Article Body -->
             <div class="prose prose-lg max-w-none">
                 <p class="text-gray-700 leading-relaxed mb-6">
-                    Dengan bangga kami umumkan bahwa tim olimpiade sains SMA Nusantara telah berhasil meraih 
+                    Dengan bangga kami umumkan bahwa tim olimpiade sains SMKIT Ibnul Qayyim telah berhasil meraih 
                     juara 1 dalam kompetisi Olimpiade Sains Nasional (OSN) 2024 bidang Matematika. 
                     Prestasi gemilang ini diraih setelah melalui proses seleksi yang ketat dari tingkat 
                     kabupaten hingga nasional.
                 </p>
                 
                 <p class="text-gray-700 leading-relaxed mb-6">
-                    Tim yang terdiri dari tiga siswa berbakat, yaitu Ahmad Rizki Pratama (XI IPA 1), 
-                    Sarah Putri Amelia (XI IPA 2), dan Muhammad Fachri (XI IPA 3), berhasil mengungguli 
+                    Tim yang terdiri dari tiga siswa berbakat, yaitu Syafii Imam Makhdi, 
+                    Ali abdurrazaq, dan alvansyah Wardhana, berhasil mengungguli 
                     45 tim lain dari seluruh Indonesia. Mereka menunjukkan pemahaman mendalam dan 
                     kemampuan problem solving yang luar biasa dalam setiap tahap kompetisi.
                 </p>
@@ -94,7 +94,7 @@
                 </p>
                 
                 <p class="text-gray-700 leading-relaxed mb-6">
-                    Prestasi ini membawa SMA Nusantara ke peta pendidikan nasional sebagai salah satu 
+                    Prestasi ini membawa SMKIT Ibnul Qayyim ke peta pendidikan nasional sebagai salah satu 
                     sekolah dengan program unggulan di bidang sains. Ke depannya, sekolah akan terus 
                     meningkatkan kualitas pembelajaran dan membuka lebih banyak kesempatan bagi siswa 
                     untuk mengembangkan potensi mereka di berbagai bidang.
