update: fix mitra pkl

--- a/profil.html
+++ b/profil.html
@@ -739,6 +739,10 @@
                                 </div>
 
                                 <div class="flex-shrink-0 flex items-center justify-center h-16">
+                                    <img src="img/pelindo.png" alt="Universitas Dipanegara" class="h-16 w-auto object-contain">
+                                </div>
+
+                                <div class="flex-shrink-0 flex items-center justify-center h-16">
                                     <img src="img/jogjaide.png" alt="Universitas Ciputera" class="h-16 w-auto object-contain">
                                 </div>
 
